NATTQA-ENV/force-app/main/default/objects/Ctbr_Account_Address_Junction__c/Ctbr_Account_Address_Junction__c.object-meta.xml
<CustomObject>
    <label>Ctbr Account Address Junction</label>
    <nameField>
        <label>Ctbr Account Address Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ctbr Account Address Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>