NATTQA-ENV/force-app/main/default/objects/Ctbr_Account_Address_Junction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ctbr Account Address Junctions</relationshipLabel>
    <relationshipName>Ctbr_Account_Address_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>