NATTQA-ENV/force-app/main/default/objects/Ctbr_Account_Address_Junction__c/fields/Address_Details__c.field-meta.xml
<CustomField>
    <fullName>Address_Details__c</fullName>
    <formula>CTBR_Address__r.NATT_Street__c &amp; &quot;, &quot; &amp;
TEXT(CTBR_Address__r.NATT_State_Province__c) &amp; &quot;, &quot; &amp;
TEXT(CTBR_Address__r.NATT_Country__c) &amp; &quot;, &quot; &amp;
CTBR_Address__r.NATT_Zip_Postal_Code__c</formula>
    <label>CTBR Address Details</label>
    <type>Text</type>
</CustomField>