NATTQA-ENV/force-app/main/default/objects/Ctbr_Account_Address_Junction__c/fields/CTBR_Address__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTBR Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NATT_Address__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CTBR Address</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Ctbr Account Address Junctions (CTBR Billing Address)</relationshipLabel>
    <relationshipName>Ctbr_Account_Address_Junctions1</relationshipName>
    <type>Lookup</type>
</CustomField>